# Ngampung

./: .gitignore  CMakeLists.txt  NOTE.md  README.md  run.ps1
include/: initial.h
include/body/: body.h  dynamic.h  static.h
include/engine/: audio.h  game.h  gui.h  log.h  network.h  physic.h  render.h  system.h
include/engine/render_type/: gui.h  world.h
include/namespace/: audio.h  physic.h  system.h
include/nodes/body/: dynamic.h  static.h
include/nodes/gui/: click.h  container.h
include/singleton/: mouse.h
include/sources/objects/: player.h
include/struct/: dynamic.h
src/: initial.cpp  main.cpp
src/body/: body.cpp  dynamic.cpp  static.cpp
src/engine/: audio.cpp  game.cpp  gui.cpp  log.cpp  network.cpp  network_manager.cpp  physic.cpp  render.cpp  singleton.cpp  system.cpp
src/engine/render_type/: gui.cpp  world.cpp
src/gui/: container.cpp
src/namespace/: audio.cpp  physic.cpp  system.cpp
src/nodes/body/: body.cpp  dynamic.cpp  static.cpp
src/nodes/gui/: container.cpp
src/setup/: initial.cpp
src/singleton/: mouse.cpp
src/sources/objects/: player.cpp
src/sources/screens/: gui_main.cpp
